# jumper

./: CONTRIBUTING.md  Cargo.toml  LICENSE  PUBLISHING.md  README.md  diagnose.sh  install.sh  test_jumper.sh
aur/: PKGBUILD  README.md  jumper-git.install
shell/: jumper.fish  jumper.sh
src/: app.rs  clipboard.rs  config.rs  events.rs  file_ops.rs  fuzzy.rs  main.rs  ui.rs
