[package]
name = "jumper"
version = "0.1.0"
edition = "2021"
authors = ["enheit"]
description = "A blazing fast terminal file manager with vim-like keybindings"
license = "MIT"
repository = "https://github.com/enheit/jumper"
keywords = ["file-manager", "terminal", "vim", "tui", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "jumper"
path = "src/main.rs"

[dependencies]
# UI Framework
ratatui = { version = "0.29", features = ["serde"] }
crossterm = { version = "0.28", features = ["event-stream"] }

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Configuration
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# File Operations
fs_extra = "1.3"
walkdir = "2"

# Fuzzy Search
fuzzy-matcher = "0.3"

# System Integration
open = "5"
arboard = { version = "3", features = ["wayland-data-control"] }

# Directories
directories = "5"

# Error Handling
anyhow = "1"
